fix: 🐛 Style fixes and improvements
Fixed fonts-sizes across the whole system to avoid breaking the official modules too much in the transition.

Once style transition is complete I will work on making font-sizes more accessible.

--- a/src/styles/components/_character-generator.scss
+++ b/src/styles/components/_character-generator.scss
@@ -24,7 +24,7 @@
 		font-weight: 400;
 		padding: 8px 19px;
 		color: #fff;
-		font-family: "IM FELL DW Pica";
+		font-family: "IM Fell DW Pica";
 		text-transform: uppercase;
 		&:hover {
 			text-shadow: 0 0 6px #fff;
@@ -35,15 +35,16 @@
 
 .chargen-title {
 	margin-top: 20px;
-	font-size: 1.287rem;
-	font-family: "IM FELL DW Pica";
+	font-size: var(--font-size--large);
+	font-family: "IM Fell DW Pica";
+	font-weight: 600;
 	text-transform: uppercase;
 	color: #363636;
 }
 
 .chargen-description {
 	font-family: "IM Fell Great Primer";
-	font-size: 1rem;
+	font-size: var(--font-size--default);
 	text-align: justify;
 	margin: 20px 0;
 }
@@ -74,7 +75,7 @@
 	margin-left: 30px;
 	font-family: "IM FELL DW Pica";
 	justify-content: space-around;
-	font-size: 1.143rem;
+	font-size: var(--font-size--default);
 	background: #fff;
 	border-image-outset: 3px;
 }
