--- a/src/styles/sheets/tab/_main.scss
+++ b/src/styles/sheets/tab/_main.scss
@@ -1,10 +1,10 @@
 .forbidden-lands .main-tab {
-	font-size: 1.05rem;
 	display: grid;
 	gap: 8px;
 	grid-template-columns: 1fr 1fr;
 	height: 100%;
 	overflow-y: auto;
+	font-size: var(--font-size--default);
 }
 
 .forbidden-lands .attributes {
@@ -46,6 +46,7 @@
 }
 .forbidden-lands .conditions-grid a.condition {
 	font-family: var(--font-special);
+	font-size: var(--font-size--default);
 	font-weight: bold;
 	display: inline-grid;
 	grid: inherit;
@@ -54,7 +55,7 @@
 }
 
 .forbidden-lands .character .condition i {
-	font-size: 1.287rem;
+	font-size: var(--font-size--large);
 	justify-self: end;
 }
 
