--- a/src/styles/sheets/tab/_stronghold-building.scss
+++ b/src/styles/sheets/tab/_stronghold-building.scss
@@ -28,6 +28,6 @@
 
 .forbidden-lands .stronghold .buildings .building .button {
 	flex-basis: 10%;
-	font-size: 0.71rem;
+	font-size: 11px;
 	text-align: right;
 }
