--- a/src/styles/sheets/tab/_stronghold-gear.scss
+++ b/src/styles/sheets/tab/_stronghold-gear.scss
@@ -47,7 +47,7 @@
 
 	.button {
 		flex-basis: 10%;
-		font-size: 0.71rem;
+		font-size: 11px;
 		text-align: right;
 	}
 }
