--- a/src/styles/sheets/tab/_stronghold-hireling.scss
+++ b/src/styles/sheets/tab/_stronghold-hireling.scss
@@ -33,6 +33,6 @@
 
 .forbidden-lands .stronghold .hirelings .hireling .button {
 	flex-basis: 10%;
-	font-size: 0.71rem;
+	font-size: 11px;
 	text-align: right;
 }
