--- a/src/styles/system/_root.scss
+++ b/src/styles/system/_root.scss
@@ -9,10 +9,11 @@
 	--font-special: "IM Fell DW Pica", serif;
 	--font-subheader: "IM Fell DW Pica SC", serif;
 	--font-table: "Poppins", sans-serif;
-	--font-size--very-small: 12px;
-	--font-size--small: 14px;
-	--font-size--default: 16px;
-	--font-size--large: 18px;
-	--font-size--extra-large: 20px;
-	font-size: var(--font-size--small);
+	font-size: 62.5%;
+	--font-size--extra-small: 1rem;
+	--font-size--very-small: 1.2rem;
+	--font-size--small: 1.4rem;
+	--font-size--default: 1.6rem;
+	--font-size--large: 1.8rem;
+	--font-size--extra-large: 2rem;
 }
