--- a/src/styles/utils/_tab-button.scss
+++ b/src/styles/utils/_tab-button.scss
@@ -4,8 +4,8 @@
 		font-family: swordlings;
 		text-transform: lowercase;
 		content: "x";
-		line-height: 17px;
-		margin-left: -16px;
+		line-height: 18px;
+		margin-left: -17px;
 		margin-top: 1px;
 	}
 	#{$add}:after {
@@ -14,7 +14,7 @@
 		text-transform: lowercase;
 		content: "l";
 		font-size: 25px;
-		line-height: 22px;
+		line-height: 23px;
 		margin-left: 1px;
 	}
 }
